@@ -49,3 +49,26 @@ define command {
 	command_line /usr/local/nagios/notifications/notify-none
 }
 
+define contact {
+	contact_name	second
+	host_notifications_enabled	0
+	service_notifications_enabled	0
+	host_notification_period	none
+	service_notification_period	none
+	host_notification_options	d,u,f,r,s
+	service_notification_options	w,u,c,r,f,s
+	host_notification_commands	notify-none
+	service_notification_commands	notify-none
+}
+	
+define contactgroup {
+	contactgroup_name	causetestfailure
+	alias	This causes a test failure by having a comma separated list before the empty contactgroup
+	members	nagiosadmin,second
+}
+
+define contactgroup {
+	contactgroup_name	empty
+	alias	No members defined - this should pass validation
+}
+
